# neurogc

./: .gitignore  CONTRIBUTING.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  analyze_benchmark.py  cliff.toml  config.json  locustfile.py  main.py  metrics_server.py  model.py  more_training_data.csv  profiler.py  pyproject.toml  results.md  results.py  server_with_neurogc.py  server_without_neurogc.py  training_data.csv  ui.html
benchmarks/: .gitkeep
benchmarks/classical/09-02-2026-08-45/: README.md  benchmark.csv
benchmarks/classical/09-02-2026-09-03/: README.md  benchmark.csv
benchmarks/classical/09-02-2026-09-39/: README.md  benchmark.csv
benchmarks/feedforward/09-02-2026-08-39/: README.md  benchmark.csv
benchmarks/feedforward/09-02-2026-09-06/: README.md  benchmark.csv
benchmarks/feedforward/09-02-2026-09-23/: README.md  benchmark.csv
benchmarks/lstm/09-02-2026-08-09/: README.md  benchmark.csv
benchmarks/lstm/09-02-2026-08-48/: benchmark.csv
benchmarks/lstm/09-02-2026-09-50/: README.md  benchmark.csv
benchmarks/lstm/30-01-2026-23-04/: README.md  benchmark.csv
benchmarks/lstm/30-01-2026-23-27/: README.md  benchmark.csv
benchmarks/lstm/31-01-2026-20-06/: README.md  benchmark.csv
benchmarks/lstm/31-01-2026-20-15/: README.md  benchmark.csv
neurogc/: __init__.py  config.py  profiler.py  utils.py
neurogc/dashboard/: __init__.py  server.py  ui.html
neurogc/models/: __init__.py  base.py  classical.py  feedforward.py  lstm.py  transformer.py
neurogc/server/: __init__.py  base.py  with_gc.py  without_gc.py
(+6 files in other folders)
